# xmSigma

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  TODO.md
.github/workflows/: cpp.yml  release.yml  ros.yml
cmake/: xmSigmaConfig.cmake.in  xmotion-coreConfig.cmake.in
docs/adr/: 0001-foundation-utilities.md
docs/design/: logging.md
examples/: CMakeLists.txt  ctrl_logger_example.cpp  rt_logger_example.cpp  xlogger_example.cpp
include/xmsigma/container/: ring_buffer.hpp
include/xmsigma/logging/: csv_logger.hpp  ctrl_logger.hpp  event_logger.hpp  rt_logger.hpp  rt_logger_mpsc.hpp  xlogger.hpp
include/xmsigma/logging/details/: default_logger.hpp  logger_vendor_spdlog.hpp  logging_utils.hpp  spdlog_headers.hpp  specialized_logger.hpp
include/xmsigma/serialization/: byte_order.hpp  checksum.hpp
include/xmsigma/types/: base_types.hpp  geometry.hpp  geometry_types.hpp  quantities.hpp  scalar.hpp  stamped.hpp  time.hpp  types.hpp  vector.hpp
src/: CMakeLists.txt  ctrl_logger.cpp  default_logger.cpp  logger_vendor_spdlog.cpp  rt_logger.cpp  rt_logger_mpsc.cpp
src/interface/: CMakeLists.txt
src/interface/include/interface/control/: controller_interface.hpp
src/interface/include/interface/driver/: can_interface.hpp  hid_handler_interface.hpp  imu_interface.hpp  joystick_interface.hpp  keyboard_interface.hpp  modbus_rtu_client.hpp  modbus_rtu_interface.hpp  motor_controller_array_interface.hpp  motor_controller_interface.hpp  rc_receiver_interface.hpp  sensor_interface.hpp  serial_interface.hpp
src/interface/include/interface/type/: base_types.hpp  trajectory_types.hpp
src/logging/: CMakeLists.txt
src/logging/examples/: CMakeLists.txt  ctrl_logger_example.cpp
src/logging/include/logging/: csv_logger.hpp  ctrl_logger.hpp  event_logger.hpp  xlogger.hpp
src/logging/include/logging/details/: default_logger.hpp  logger_interface.hpp  logger_vendor_spdlog.hpp  logging_utils.hpp  specialized_logger.hpp
src/logging/src/: ctrl_logger.cpp  default_logger.cpp  logger_vendor_spdlog.cpp  logging_utils.hpp
src/logging/test/: CMakeLists.txt  test_csv_logger.cpp  test_xlogger.cpp
src/types/include/xmotion/types/: geometry_types.hpp
test/: CMakeLists.txt  test_csv_logger.cpp  test_ctrl_logger.cpp  test_event_logger.cpp  test_mpsc_rt_logger.cpp  test_ring_buffer.cpp  test_rt_logger.cpp  test_serialization.cpp  test_types.cpp  test_xlogger.cpp
